@@ -140,17 +140,17 @@ class MySQLProtocolTests(tests.MySQLConnectorTests):
         """Make a SSL authentication packet"""
         cases = [
             ({},
-             b'\x00\x00\x00\x00\x00\x00\x00\x40\x21\x00\x00\x00\x00\x00'
+             b'\x00\x00\x00\x00\x00\x00\x00@-\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
-             b'\x00\x00\x00\x00'),
+             b'\x00\x00\x00'),
             ({'charset': 8},
              b'\x00\x00\x00\x00\x00\x00\x00\x40\x08\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00'),
             ({'client_flags': 240141},
-             b'\x0d\xaa\x03\x00\x00\x00\x00\x40\x21\x00\x00\x00\x00\x00'
+             b'\r\xaa\x03\x00\x00\x00\x00@-\x00\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
-             b'\x00\x00\x00\x00'),
+             b'\x00\x00'),
             ({'charset': 8, 'client_flags': 240141,
               'max_allowed_packet': 2147483648},
              b'\x0d\xaa\x03\x00\x00\x00\x00\x80\x08\x00\x00\x00\x00\x00'
